JREを指定できるようにするための残りの処理を記述した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@1539 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/build.properties
+++ b/org.seasar.ymir.eclipse/build.properties
@@ -11,7 +11,8 @@ bin.includes = plugin.xml,\
                lib/xom-tiger-0.0.6.jar,\
                plugin_ja.properties,\
                plugin.properties,\
-               templates/
+               templates/,\
+               lib/kvasir-util-3.0.0-RC3.jar
 src.includes = lib/,\
                src/main/java/,\
                plugin.properties,\
