--- a/org.seasar.ymir.eclipse/build.properties
+++ b/org.seasar.ymir.eclipse/build.properties
@@ -7,12 +7,11 @@ bin.includes = plugin.xml,\
                lib/,\
                lib/mvnhack-0.0.3.jar,\
                lib/freemarker-2.3.9.jar,\
-               lib/xom-0.0.6.jar,\
-               lib/xom-tiger-0.0.6.jar,\
                plugin_ja.properties,\
                plugin.properties,\
                templates/,\
-               lib/kvasir-util-3.0.0-RC3.jar
+               lib/kvasir-util-3.0.0-RC3.jar,\
+               lib/xom-0.1.0.jar
 src.includes = lib/,\
                src/main/java/,\
                plugin.properties,\
