--- a/org.seasar.ymir.eclipse/.classpath
+++ b/org.seasar.ymir.eclipse/.classpath
@@ -9,6 +9,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="lib" path="lib/mvnhack-0.0.3.jar" sourcepath="lib-sources/mvnhack-0.0.3-sources.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
-	<classpathentry kind="lib" path="lib/xom-0.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/xom-0.1.0.jar" sourcepath="lib-sources/xom-0.1.0-sources.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
