ウィザードにイメージを出すようにした。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@1588 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/build.properties
+++ b/org.seasar.ymir.eclipse/build.properties
@@ -18,5 +18,6 @@ src.includes = lib/,\
                plugin.xml,\
                plugin_ja.properties,\
                build.properties,\
-               templates/
+               templates/,\
+               lib-sources/
 jars.compile.order = .
