・プラグインのエクスポート時にビルドエラーが発生する問題に対処した。 ・依存していないプラグインのエントリを削除した。 ・使っていないフィールドを削除した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@1589 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/build.properties
+++ b/org.seasar.ymir.eclipse/build.properties
@@ -4,14 +4,10 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               lib/,\
-               lib/mvnhack-0.0.3.jar,\
-               lib/freemarker-2.3.9.jar,\
                plugin_ja.properties,\
                plugin.properties,\
                templates/,\
-               lib/kvasir-util-3.0.0-RC3.jar,\
-               lib/xom-0.1.0.jar
+               lib/
 src.includes = lib/,\
                src/main/java/,\
                plugin.properties,\
@@ -21,3 +17,4 @@ src.includes = lib/,\
                templates/,\
                lib-sources/
 jars.compile.order = .
+javacDefaultEncoding.. = UTF-8
