スケルトン中にvili-*を含められるように、ルートより下のvili-*は無視しないようにした。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@1601 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/vili-behavior.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/vili-behavior.properties
@@ -1,2 +1,2 @@
-expansion.excludes=META-INF/,**/vili-*
+expansion.excludes=META-INF/,vili-*
 template.includes=**/.*,**/*.xml,**/*.dicon,**/*.properties,**/*.prefs,**/*.java
