ウィザードにあった一部の設定をpreferencesに移動した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@1673 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/plugin.xml
+++ b/org.seasar.ymir.eclipse/plugin.xml
@@ -42,9 +42,9 @@
    <extension
          point="org.eclipse.ui.preferencePages">
       <page
-            name="Sample Preferences"
-            class="org.seasar.ymir.eclipse.preferences.SamplePreferencePage"
-            id="org.seasar.ymir.eclipse.preferences.SamplePreferencePage">
+            name="%plugin.name"
+            class="org.seasar.ymir.eclipse.preferences.ViliPreferencePage"
+            id="org.seasar.ymir.eclipse.preferences.ViliPreferencePage">
       </page>
    </extension>
    <extension
