--- a/org.seasar.ymir.eclipse/.classpath
+++ b/org.seasar.ymir.eclipse/.classpath
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/main/java"/>
-	<classpathentry kind="src" output="build/test-classes" path="src/test/java"/>
-	<classpathentry kind="src" output="build/test-resources" path="src/test/resources"/>
 	<classpathentry exported="true" kind="lib" path="lib/kvasir-util-3.0.0-RC3.jar" sourcepath="lib-sources/kvasir-util-3.0.0-RC3-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/freemarker-2.3.9.jar"/>
-	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry exported="true" kind="lib" path="lib/mvnhack-0.0.3.jar" sourcepath="lib-sources/mvnhack-0.0.3-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/xom-0.1.0.jar" sourcepath="lib-sources/xom-0.1.0-sources.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
-	<classpathentry kind="lib" path="lib/mvnhack-0.0.3.jar" sourcepath="lib-sources/mvnhack-0.0.3-sources.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
-	<classpathentry kind="lib" path="lib/xom-0.1.0.jar" sourcepath="lib-sources/xom-0.1.0-sources.jar"/>
+	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
