生成されるプロジェクトのJRE Complianceが正しく設定されない不具合に対処した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@1790 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/build.properties
+++ b/org.seasar.ymir.eclipse/build.properties
@@ -7,14 +7,18 @@ bin.includes = plugin.xml,\
                plugin_ja.properties,\
                plugin.properties,\
                templates/,\
-               lib/
+               lib/,\
+               prefs/
 src.includes = lib/,\
-               src/main/java/,\
                plugin.properties,\
                plugin.xml,\
                plugin_ja.properties,\
                build.properties,\
                templates/,\
-               lib-sources/
+               lib-sources/,\
+               prefs/,\
+               src/,\
+               icons/,\
+               META-INF/
 jars.compile.order = .
 javacDefaultEncoding.. = UTF-8
