・スケルトンのテンプレートの文字エンコーディングを指定できるようにした。 ・評価結果が空なら展開しないように指定できるようにした。 ・オフラインモードを指定できるようにした。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@1858 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/vili-behavior.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/vili-behavior.properties
@@ -1,2 +1,3 @@
 expansion.excludes=META-INF/,vili-*
 template.includes=**/.*,**/*.xml,**/*.dicon,**/*.properties,**/*.prefs,**/*.java
+template.encoding.UTF-8=**/
