メタデータを整備した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@1863 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.maven.ide.eclipse_light/about.properties
+++ b/org.maven.ide.eclipse_light/about.properties
@@ -1,5 +1,5 @@
-featureName=Maven 2.0 integration
-featureText=Maven 2.0 integration\n\
+featureName=Maven 2.0 integration (Light)
+featureText=Maven 2.0 integration (Light)\n\
  Copyright (c) 2007, 2008 Sonatype, Inc.\n\
  All rights reserved. This program and the accompanying materials\n\
  are made available under the terms of the Eclipse Public License v1.0\n\
