--- a/org.seasar.ymir.eclipse/.classpath
+++ b/org.seasar.ymir.eclipse/.classpath
@@ -5,6 +5,8 @@
 	<classpathentry exported="true" kind="lib" path="lib/freemarker-2.3.9.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/mvnhack-0.0.3.jar" sourcepath="lib-sources/mvnhack-0.0.3-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/xom-0.1.0.jar" sourcepath="lib-sources/xom-0.1.0-sources.jar"/>
+	<classpathentry kind="lib" path="lib/stax-api-1.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/wstx-asl-3.2.7.jar" sourcepath="lib-sources/wstx-asl-3.2.7-sources.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="output" path="build/classes"/>
