--- a/org.seasar.ymir.eclipse/build.properties
+++ b/org.seasar.ymir.eclipse/build.properties
@@ -7,8 +7,8 @@ bin.includes = plugin.xml,\
                plugin_ja.properties,\
                plugin.properties,\
                templates/,\
-               lib/,\
-               prefs/
+               prefs/,\
+               lib/
 src.includes = lib/,\
                plugin.properties,\
                plugin.xml,\
