プロジェクト毎に設定を保存できるようにするための準備を行なっている。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@1982 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/plugin.xml
+++ b/org.seasar.ymir.eclipse/plugin.xml
@@ -55,5 +55,14 @@
          </enabledWhen>
       </page>
    </extension>
+   <extension
+         id="id1"
+         point="org.eclipse.core.resources.natures">
+      <runtime>
+         <run
+               class="org.seasar.ymir.eclipse.natures.ViliNature">
+         </run>
+      </runtime>
+   </extension>
 
 </plugin>
