・プロジェクト作成時の設定をpreferencesとして保持するようにした。 ・プロジェクト作成情報をMapではなく専用のインタフェース経由でテンプレートから参照できるようにした。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2003 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/plugin.xml
+++ b/org.seasar.ymir.eclipse/plugin.xml
@@ -56,7 +56,8 @@
       </page>
    </extension>
    <extension
-         id="id1"
+         id="org.seasar.ymir.eclipse.viliNature"
+         name="Vili Project Nature"
          point="org.eclipse.core.resources.natures">
       <runtime>
          <run
