AddFragmentsWizardを出すあたりまで。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2010 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/plugin.xml
+++ b/org.seasar.ymir.eclipse/plugin.xml
@@ -77,7 +77,7 @@
                path="additions">
          </menu>
          <action
-               class="org.seasar.ymir.eclipse.actions.AddFragmentsAction"
+               class="org.seasar.ymir.eclipse.popup.actions.AddFragmentsAction"
                id="org.seasar.ymir.eclipse.addFragmentsAction"
                label="%popup.action.addFragments"
                menubarPath="org.seasar.ymir.eclipse.menu/group">
