スケルトン、フラグメントが正しく展開されるようにした。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2019 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/plugin.xml
+++ b/org.seasar.ymir.eclipse/plugin.xml
@@ -56,12 +56,12 @@
       </page>
    </extension>
    <extension
-         id="org.seasar.ymir.eclipse.viliNature"
+         id="org.seasar.ymir.eclipse.viliProjectNature"
          name="Vili Project Nature"
          point="org.eclipse.core.resources.natures">
       <runtime>
          <run
-               class="org.seasar.ymir.eclipse.natures.ViliNature">
+               class="org.seasar.ymir.eclipse.natures.ViliProjectNature">
          </run>
       </runtime>
    </extension>
@@ -84,11 +84,21 @@
             <enablement>
                <objectState
                      name="projectNature"
-                     value="org.seasar.ymir.eclipse.viliNature">
+                     value="org.seasar.ymir.eclipse.viliProjectNature">
                </objectState>
             </enablement>
          </action>
       </objectContribution>
+   </extension>
+   <extension
+         id="org.seasar.ymir.eclipse.ymirProjectNature"
+         name="Ymir Project Nature"
+         point="org.eclipse.core.resources.natures">
+      <runtime>
+         <run
+               class="org.seasar.ymir.eclipse.natures.YmirProjectNature">
+         </run>
+      </runtime>
    </extension>
 
 </plugin>
