--- a/org.seasar.ymir.eclipse/.classpath
+++ b/org.seasar.ymir.eclipse/.classpath
@@ -9,6 +9,7 @@
 	<classpathentry kind="lib" path="lib/wstx-asl-3.2.7.jar" sourcepath="lib-sources/wstx-asl-3.2.7-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/freyja-1.0.11.jar" sourcepath="lib-sources/freyja-1.0.11-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging-api-1.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/vili-api-0.0.2-SNAPSHOT.jar" sourcepath="lib-sources/vili-api-0.0.2-SNAPSHOT-sources.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="output" path="build/classes"/>
