--- a/vili-api/pom.xml
+++ b/vili-api/pom.xml
@@ -48,17 +48,52 @@
       <name>The Seasar Foundation Maven2 Snapshot Repository</name>
       <url>http://maven.seasar.org/maven2-snapshot</url>
     </repository>
+    <repository>
+      <id>eclipse.repo1.maven.org</id>
+      <name>Maven Central Repository (Eclipse)</name>
+      <url>http://repo1.maven.org/eclipse</url>
+    </repository>
   </repositories>
   <dependencies>
     <dependency>
       <groupId>org.seasar.kvasir</groupId>
       <artifactId>kvasir-util</artifactId>
       <version>3.0.0-RC3</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>net.skirnir.xom</groupId>
       <artifactId>xom</artifactId>
       <version>0.1.0</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.core</groupId>
+      <artifactId>runtime</artifactId>
+      <version>3.3.100-v20070409</version>
+      <scope>provided</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.eclipse</groupId>
+          <artifactId>osgi</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.eclipse.equinox</groupId>
+          <artifactId>app</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.core</groupId>
+      <artifactId>resources</artifactId>
+      <version>3.3.0-v20070604</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.osgi</groupId>
+      <artifactId>org.eclipse.osgi</artifactId>
+      <version>3.2.1</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
