・新しい形式にテンプレートを修正した。 ・動作確認中に見つかった不具合を修正した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2032 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/plugin.xml
+++ b/org.seasar.ymir.eclipse/plugin.xml
@@ -5,10 +5,10 @@
    <extension
          point="org.eclipse.ui.newWizards">
       <wizard
-            category="org.eclipse.jdt.ui.java"
+            category="org.seasar.ymir.eclipse.viliCategory"
             class="org.seasar.ymir.eclipse.wizards.NewProjectWizard"
             finalPerspective="org.eclipse.jdt.ui.JavaPerspective"
-            icon="icons/newYmirProject.gif"
+            icon="icons/newViliProject.gif"
             id="org.seasar.ymir.eclipse.wizards.NewProjectWizard"
             name="%newWizard.name"
             project="true">
@@ -16,6 +16,10 @@
             %newWizard.description
          </description>
       </wizard>
+      <category
+            id="org.seasar.ymir.eclipse.viliCategory"
+            name="%newWizard.category.name">
+      </category>
    </extension>
    <extension
          point="org.eclipse.ui.preferencePages">
