--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/vili-behavior.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/vili-behavior.properties
@@ -1,3 +1,3 @@
-expansion.excludes=META-INF/,vili-*
+expansion.excludes=META-INF/,vili-*/
 template.includes=**/.*,**/*.xml,**/*.dicon,**/*.properties,**/*.prefs,**/*.java
 template.encoding.UTF-8=**/
