--- a/vili-api/pom.xml
+++ b/vili-api/pom.xml
@@ -32,6 +32,11 @@
       </plugin>
     </plugins>
   </build>
+  <scm>
+    <connection>scm:svn:https://www.seasar.org/svn/sandbox/ymir/eclipse/trunk/vili-api</connection>
+    <developerConnection>scm:svn:https://www.seasar.org/svn/sandbox/ymir/eclipse/trunk/vili-api</developerConnection>
+    <url>http://svn.seasar.org/browse/eclipse/trunk/vili-api?root=sandbox.ymir</url>
+  </scm>
   <repositories>
     <repository>
       <id>maven.seasar.org</id>
