--- a/org.seasar.ymir.eclipse/.classpath
+++ b/org.seasar.ymir.eclipse/.classpath
@@ -4,13 +4,13 @@
 	<classpathentry exported="true" kind="lib" path="lib/kvasir-util-3.0.0-RC3.jar" sourcepath="lib-sources/kvasir-util-3.0.0-RC3-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/freemarker-2.3.9.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/mvnhack-0.0.3.jar" sourcepath="lib-sources/mvnhack-0.0.3-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/xom-0.1.0.jar" sourcepath="lib-sources/xom-0.1.0-sources.jar"/>
 	<classpathentry kind="lib" path="lib/stax-api-1.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/wstx-asl-3.2.7.jar" sourcepath="lib-sources/wstx-asl-3.2.7-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/freyja-1.0.11.jar" sourcepath="lib-sources/freyja-1.0.11-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging-api-1.0.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/vili-api-0.0.3-SNAPSHOT.jar" sourcepath="lib-sources/vili-api-0.0.3-SNAPSHOT-sources.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry exported="true" kind="lib" path="lib/vili-api-0.0.3-0.jar" sourcepath="lib-sources/vili-api-0.0.3-0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/xom-0.1.2.jar" sourcepath="lib-sources/xom-0.1.2-sources.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
