--- a/org.seasar.ymir.eclipse/build.properties
+++ b/org.seasar.ymir.eclipse/build.properties
@@ -8,8 +8,7 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                templates/,\
                prefs/,\
-               lib/,\
-               lib/vili-api-0.0.3-SNAPSHOT.jar
+               lib/
 src.includes = lib/,\
                plugin.properties,\
                plugin.xml,\
