ビューテンプレートを指定できるようにした。ビューテンプレートは${viewEncoding}のエンコーディングに変換されて展開される。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2092 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/vili-behavior.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/vili-behavior.properties
@@ -1,3 +1,4 @@
 expansion.excludes=META-INF/,vili-*/
 template.includes=**/.*,**/*.xml,**/*.dicon,**/*.properties,**/*.prefs,**/*.java
 template.encoding.UTF-8=**/
+viewTemplate.includes=**/*.htm,**/*.html,**/*.zpt
