--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/vili-behavior.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/vili-behavior.properties
@@ -1,4 +1,4 @@
 expansion.excludes=META-INF/,vili-*/
 template.includes=**/.*,**/*.xml,**/*.dicon,**/*.properties,**/*.prefs,**/*.java
 template.encoding.UTF-8=**/
-viewTemplate.includes=**/*.htm,**/*.html,**/*.zpt
+expansion.merges=pom.xml
