ポップアップメニューがViliプロジェクト以外では表示されないようにした。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2139 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/plugin.xml
+++ b/org.seasar.ymir.eclipse/plugin.xml
@@ -85,13 +85,13 @@
                id="org.seasar.ymir.eclipse.addFragmentsAction"
                label="%popup.action.addFragments"
                menubarPath="org.seasar.ymir.eclipse.menu/group">
-            <enablement>
-               <objectState
-                     name="projectNature"
-                     value="org.seasar.ymir.eclipse.viliProjectNature">
-               </objectState>
-            </enablement>
          </action>
+         <visibility>
+            <objectState
+                  name="projectNature"
+                  value="org.seasar.ymir.eclipse.viliProjectNature">
+            </objectState>
+         </visibility>
       </objectContribution>
    </extension>
    <extension
