・ProjectRelativeの管理機構を追加した。 ・アクションメニューを追加中。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2140 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/plugin.xml
+++ b/org.seasar.ymir.eclipse/plugin.xml
@@ -92,6 +92,13 @@
                   value="org.seasar.ymir.eclipse.viliProjectNature">
             </objectState>
          </visibility>
+         <action
+               class="org.seasar.ymir.eclipse.popup.actions.ActionAction"
+               id="org.seasar.ymir.eclipse.actionAction"
+               label="%popup.action.action"
+               menubarPath="org.seasar.ymir.eclipse.menu/group"
+               style="pulldown">
+         </action>
       </objectContribution>
    </extension>
    <extension
