--- a/org.seasar.ymir.eclipse/plugin.properties
+++ b/org.seasar.ymir.eclipse/plugin.properties
@@ -2,3 +2,4 @@ newWizard.name=Ymir Project
 newWizard.description=Create a Ymir project
 plugin.name=Vili
 popup.action.addFragments=Add fragments...
+popup.action.action=Action
