ViliでHTMLとPageを行き来する機能を完成させた。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2154 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/plugin.properties
+++ b/org.seasar.ymir.eclipse/plugin.properties
@@ -1,5 +1,6 @@
 newWizard.name=Ymir Project
 newWizard.description=Create a Ymir project
 plugin.name=Vili
-popup.action.addFragments=Add fragments...
-popup.action.action=Action
+action.addFragments=Add fragments...
+action.action=Action
+action.togglePageAndHtml=Toggle Page and HTML
