スケルトンのメタ情報をVILI-INFに置くように変更した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2167 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/behavior.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/behavior.properties
@@ -1,4 +1,4 @@
-expansion.excludes=META-INF/,vili-*/
+expansion.excludes=META-INF/,VILI-INF/
 template.includes=**/.*,**/*.xml,**/*.dicon,**/*.properties,**/*.prefs,**/*.java
 template.encoding.UTF-8=**/
 expansion.merges=pom.xml
