--- a/org.seasar.ymir.eclipse/.classpath
+++ b/org.seasar.ymir.eclipse/.classpath
@@ -11,6 +11,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/vili-api-0.0.3-3-SNAPSHOT.jar" sourcepath="lib-sources/vili-api-0.0.3-3-SNAPSHOT-sources.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry exported="true" kind="lib" path="lib/xom-0.1.2.jar" sourcepath="lib-sources/xom-0.1.2-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/xom-0.1.3-SNAPSHOT.jar" sourcepath="lib-sources/xom-0.1.3-SNAPSHOT-sources.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
