--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/behavior.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/behavior.properties
@@ -1,4 +1,4 @@
 expansion.excludes=META-INF/,VILI-INF/
 template.includes=**/.*,**/*.xml,**/*.dicon,**/*.properties,**/*.prefs,**/*.java
 template.encoding.UTF-8=**/
-expansion.merges=pom.xml
+expansion.merge.includes=pom.xml,**/*.properties,**/*.xproperties
