文言を若干修正。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2366 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/plugin.properties
+++ b/org.seasar.ymir.eclipse/plugin.properties
@@ -1,6 +1,6 @@
 newWizard.name=Ymir Project
 newWizard.description=Create a Ymir project
 plugin.name=Vili
-action.addFragments=Add fragments...
+action.addFragments=Add or update fragments...
 action.action=Action
 action.togglePageAndHtml=Toggle Page and HTML
