ViliProjectNatureをプロパティページから設定・解除できるようにした。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2369 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/plugin.xml
+++ b/org.seasar.ymir.eclipse/plugin.xml
@@ -58,6 +58,12 @@
             </or>
          </enabledWhen>
       </page>
+      <page
+            category="org.seasar.ymir.eclipse.properties.viliPropertyPage"
+            class="org.seasar.ymir.eclipse.properties.TemplatePropertyPage"
+            id="org.seasar.ymir.eclipse.properties.templatePropertyPage"
+            name="Template">
+      </page>
    </extension>
    <extension
          id="org.seasar.ymir.eclipse.viliProjectNature"
