--- a/vili-api/pom.xml
+++ b/vili-api/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.seasar.ymir.vili</groupId>
   <artifactId>vili-api</artifactId>
-  <version>0.0.4-1-SNAPSHOT</version>
+  <version>0.0.5-0-SNAPSHOT</version>
   <name>Vili API</name>
   <description>This is an API to communicate with Vili.</description>
   <build>
@@ -74,6 +74,11 @@
       <groupId>net.skirnir.xom</groupId>
       <artifactId>xom</artifactId>
       <version>0.1.3</version>
+    </dependency>
+    <dependency>
+      <groupId>werkzeugkasten</groupId>
+      <artifactId>mvnhack</artifactId>
+      <version>0.0.3</version>
     </dependency>
     <dependency>
       <groupId>org.eclipse.core</groupId>
