--- a/vili-api/pom.xml
+++ b/vili-api/pom.xml
@@ -69,11 +69,17 @@
       <groupId>org.seasar.kvasir</groupId>
       <artifactId>kvasir-util</artifactId>
       <version>3.0.0-RC3</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>net.skirnir.xom</groupId>
       <artifactId>xom</artifactId>
       <version>0.1.3</version>
+    </dependency>
+    <dependency>
+      <groupId>net.skirnir.freyja</groupId>
+      <artifactId>freyja</artifactId>
+      <version>1.0.11</version>
     </dependency>
     <dependency>
       <groupId>werkzeugkasten</groupId>
@@ -110,6 +116,113 @@
       <artifactId>junit</artifactId>
       <version>3.8.2</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.jdt</groupId>
+      <artifactId>core</artifactId>
+      <version>3.3.0-v_771</version>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.ui</groupId>
+      <artifactId>workbench</artifactId>
+      <version>3.3.0-I20070608-1100</version>
+      <scope>provided</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.eclipse</groupId>
+          <artifactId>swt</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.eclipse.core</groupId>
+          <artifactId>expressions</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.eclipse.core</groupId>
+          <artifactId>databinding</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.eclipse.jface</groupId>
+          <artifactId>databinding</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.eclipse</groupId>
+          <artifactId>jface</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse</groupId>
+      <artifactId>jface</artifactId>
+      <version>3.3.0-I20070606-0010</version>
+      <scope>provided</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.eclipse</groupId>
+          <artifactId>swt</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.eclipse.core</groupId>
+          <artifactId>commands</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.ui</groupId>
+      <artifactId>ide</artifactId>
+      <version>3.3.0-I20070620</version>
+      <scope>provided</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.eclipse.core</groupId>
+          <artifactId>resources</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.eclipse.core</groupId>
+          <artifactId>runtime</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.eclipse.core</groupId>
+          <artifactId>filesystem</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.eclipse</groupId>
+          <artifactId>help</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.eclipse</groupId>
+          <artifactId>ui</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.eclipse.ui</groupId>
+          <artifactId>views</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.eclipse.update</groupId>
+          <artifactId>configurator</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.eclipse.update</groupId>
+          <artifactId>core</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.eclipse.update</groupId>
+          <artifactId>ui</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.eclipse.jface</groupId>
+          <artifactId>text</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.eclipse.ui</groupId>
+          <artifactId>forms</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.swt.win32.win32</groupId>
+      <artifactId>x86</artifactId>
+      <version>3.3.0-v3346</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
   <distributionManagement>
