--- a/vili-api/pom.xml
+++ b/vili-api/pom.xml
@@ -69,7 +69,6 @@
       <groupId>org.seasar.kvasir</groupId>
       <artifactId>kvasir-util</artifactId>
       <version>3.0.0-RC3</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>net.skirnir.xom</groupId>
@@ -121,12 +120,17 @@
       <groupId>org.eclipse.jdt</groupId>
       <artifactId>core</artifactId>
       <version>3.3.0-v_771</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.eclipse.equinox</groupId>
+          <artifactId>common</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.eclipse.ui</groupId>
       <artifactId>workbench</artifactId>
       <version>3.3.0-I20070608-1100</version>
-      <scope>provided</scope>
       <exclusions>
         <exclusion>
           <groupId>org.eclipse</groupId>
@@ -154,7 +158,6 @@
       <groupId>org.eclipse</groupId>
       <artifactId>jface</artifactId>
       <version>3.3.0-I20070606-0010</version>
-      <scope>provided</scope>
       <exclusions>
         <exclusion>
           <groupId>org.eclipse</groupId>
@@ -170,7 +173,6 @@
       <groupId>org.eclipse.ui</groupId>
       <artifactId>ide</artifactId>
       <version>3.3.0-I20070620</version>
-      <scope>provided</scope>
       <exclusions>
         <exclusion>
           <groupId>org.eclipse.core</groupId>
@@ -222,7 +224,6 @@
       <groupId>org.eclipse.swt.win32.win32</groupId>
       <artifactId>x86</artifactId>
       <version>3.3.0-v3346</version>
-      <scope>provided</scope>
     </dependency>
   </dependencies>
   <distributionManagement>
