--- a/vili-api/pom.xml
+++ b/vili-api/pom.xml
@@ -40,9 +40,9 @@
     </plugins>
   </build>
   <scm>
-    <connection>scm:svn:https://www.seasar.org/svn/sandbox/ymir/eclipse/trunk/vili-api</connection>
-    <developerConnection>scm:svn:https://www.seasar.org/svn/sandbox/ymir/eclipse/trunk/vili-api</developerConnection>
-    <url>http://svn.seasar.org/browse/eclipse/trunk/vili-api?root=sandbox.ymir</url>
+    <connection>scm:svn:https://www.seasar.org/svn/ymir/eclipse/trunk/vili-api</connection>
+    <developerConnection>scm:svn:https://www.seasar.org/svn/ymir/eclipse/trunk/vili-api</developerConnection>
+    <url>http://svn.seasar.org/browse/eclipse/trunk/vili-api?root=ymir</url>
   </scm>
   <repositories>
     <repository>
