--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/impl/behavior.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/impl/behavior.properties
@@ -1,4 +1,4 @@
 expansion.excludes=META-INF/,VILI-INF/
-template.includes=pom.xml,.*,**/*.xml,**/*.dicon,**/*.properties,**/*.prefs,**/*.java
+template.includes=pom.xml,.*,**/*.xml,**/*.dicon,**/*.properties,**/.xproperties,**/*.prefs,**/*.java
 template.encoding.UTF-8=**/
-expansion.merge.includes=pom.xml,**/*.properties,**/*.xproperties
+expansion.merge.includes=pom.xml,**/*.dicon,**/*.properties,**/*.xproperties,**/*.prefs
